# timon-llm

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  conftest.py  pyproject.toml
backend/app/: __init__.py  auth.py  db.py  engine_provider.py  main.py  models.py  schemas.py  settings.py
backend/app/api/: auth.py  chat.py  features.py  presets.py
backend/tests/: test_api.py  test_db.py  test_engine_provider.py  test_schemas.py
docs/: 00-overview.md  01-architecture.md  02-getting-started.md  03-deployment.md  04-roles.md  05-glossary.md
docs/superpowers/plans/: 2026-06-13-timon-scaffold.md
docs/superpowers/specs/: 2026-06-13-timon-scaffold-design.md
engine/: Dockerfile  pyproject.toml
engine/eval/: README.md  __init__.py  dataset.example.jsonl  run_eval.py
engine/tests/: test_knobs.py  test_mock.py
engine/timon_engine/: __init__.py  base.py  gemma.py  knobs.py  mock.py
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/timon/: page.tsx
frontend/app/timon/perfil/: page.tsx
frontend/components/: AuthGuard.tsx  ChatStream.tsx  FeaturePanel.tsx  Header.tsx  Knob.tsx  KnobConsole.tsx  LoginScreen.tsx  Logo.tsx  LogoutOverlay.tsx  PlansModal.tsx  PresetManager.tsx  RegisterModal.tsx  TermsModal.tsx  UserMenu.tsx
frontend/lib/: api.ts  auth.ts  google-sso.ts  store.ts
