[project]
name = "timon"
version = "0.1.0"
description = "Timón — middleware de tono para LLMs (activation steering sobre Gemma)"
requires-python = ">=3.12"
readme = "README.md"

[tool.uv.workspace]
members = ["backend", "engine"]

[tool.uv.sources]
timon-engine = { workspace = true }

[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.27"]
